# pybama.org

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  components.json  next.config.js  nixpacks.toml  package-lock.json  package.json  prettier.config.js  pyproject.toml  railway.json  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
resources/: App.tsx  main.ts  main.tsx
resources/layouts/: MainLayout.tsx
resources/pages/: Home.tsx  PageNotFound.tsx  Placeholder.tsx
src/app/: layout.tsx
src/app/(main)/: layout.tsx  page.tsx
src/app/components/: BackgroundImage.tsx  Button.tsx  Container.tsx  DiamondIcon.tsx  Footer.tsx  Header.tsx  Hero.tsx  Layout.tsx  Logo.tsx  Newsletter.tsx  Schedule.tsx  Speakers.tsx  Sponsors.tsx
src/pybama_org/: __init__.py  __main__.py  app.py  utils.py
src/pybama_org/api/: __init__.py  __main__.py  __metadata__.py  app.py
src/pybama_org/api/components/: __init__.py  urls.py
src/pybama_org/api/components/system/: __init__.py  controllers.py  urls.py
src/pybama_org/api/config/: __init__.py  core.py  routers.py  settings.py
src/pybama_org/components/: __init__.py
src/pybama_org/components/frontend/: __init__.py  controller.py  controllers.py  urls.py
src/pybama_org/components/frontend/templates/: index.html
src/pybama_org/components/frontend/templates/base/: base.html
src/pybama_org/components/system/: __init__.py  controllers.py  urls.py
src/pybama_org/config/: __init__.py  core.py  routers.py  settings.py
